@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-15T16:32:50Z",
+  "timestamp" : "2022-09-16T08:28:50Z",
   "count_outdated" : 516,
   "uniques_outdated" : 118,
-  "count" : 524,
-  "uniques" : 122,
+  "count" : 525,
+  "uniques" : 123,
   "views" : [
     {
       "timestamp": "2022-09-08T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
