@@ -1,3 +1,11 @@
+2022-09-16T08:28:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3066457454
+* notice: last 14d: unq all: 5 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 118 516 / 122 524
+* notice: next accum: outdated-unq outdated-all / unq all: 118 516 / 123 525
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-16]
+
 2022-09-15T16:32:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3062125609
 * notice: last 14d: unq all: 4 8
